...
fun Dialog(
    modifier: Modifier,
    onDismissRequest: () -> Unit,
    properties: DialogProperties,
    message: Dialog.Text,
    alignment: Alignment.Horizontal,
    button: Dialog.Text,
    vararg buttons: Dialog.Text,
) {
    Dialog(
        onDismissRequest = onDismissRequest,
        properties = properties,
    ) {
...
