...
                            style = TextStyle(
                                textAlign = TextAlign.Center,
                                color = Colors.white,
                            ),
                        )
                    }
                    "dialog".also { text ->
                        var dialog by remember { mutableStateOf(false) }
                        Button(
                            text = text,
                            onClick = {
                                dialog = true
                            },
...
